--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   	padding: 0px;
 }
 
+tw-link {
+	color: #fb6090;
+}
+
 div.li-page {
 	background-image:url("./resource/li.png");
   	background-size: 100% 100%;  	
@@ -33,7 +37,7 @@ div.background {
 }
 
 div.cover-page {
-	background-color: rgb(133, 220, 255);
+	background-color: #fcd6d0;
   	background-size: 100% 100%;
 }
 
@@ -49,7 +53,7 @@ div.cover-inner {
   	height: calc(100% - 1em);
   	border-width: 2px;
  	border-style: solid;
-  	border-color: rgb(69, 93, 255);
+  	border-color: #fb6090;
 }
 
 div.page {
@@ -185,7 +189,7 @@ div.opaque {
 
 
 
-[[어떤 생각을 적을까?|02]]&lt;/div&gt;
+[[ 또 어떤 생각을 적을까?|02]]&lt;/div&gt;
 ]&lt;/div&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="02" tags="2" position="100,250" size="100,100">&lt;div class=&quot;background&quot;&gt;&lt;div class=&quot;page body-page&quot;&gt;(char-style: via (t8n-delay:pos*60)+(t8n:&#39;dissolve&#39;)+(text-colour:black))
 [&lt;div class=&quot;date&quot;&gt;2024/10/25&lt;/div&gt;
 &lt;div class=&quot;main&quot;&gt;오늘도 많은 사람들 속에 내 시선은 온통 너를 보고 있었어. 
@@ -215,7 +219,7 @@ div.opaque {
 
 
 
-[[그 사람에 대해 생각하지 않으려고 하지만..|04]]&lt;/div&gt;
+[[생각하지 않으려고 하지만..|04]]&lt;/div&gt;
 ]&lt;/div&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="5" name="04" tags="2" position="100,500" size="100,100">&lt;div class=&quot;background&quot;&gt;&lt;div class=&quot;page body-page&quot;&gt;(char-style: via (t8n-delay:pos*60)+(t8n:&#39;dissolve&#39;)+(text-colour:black))
 [&lt;div class=&quot;date&quot;&gt;2024/10/27&lt;/div&gt;
 &lt;div class=&quot;main&quot;&gt;....
@@ -224,7 +228,7 @@ div.opaque {
 가끔은 이런 마음들을 다 떠나서 널 좋아해도 될지를 고민해.. 
 
 
-[[그 사람을 계속 떠올린다|05]]&lt;/div&gt;
+[[계속 떠올린다|05]]&lt;/div&gt;
 ]&lt;/div&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="6" name="05" tags="3" position="100,625" size="100,100">&lt;div class=&quot;background&quot;&gt;&lt;div class=&quot;page body-page li-page&quot;&gt;(char-style: via (t8n-delay:pos*60)+(t8n:&#39;dissolve&#39;)+(text-colour:black))
 [&lt;div class=&quot;opaque inline p-2 date&quot;&gt;2024/10/31&lt;/div&gt;
 &lt;div class=&quot;top-20vh&quot;&gt;&lt;div class=&quot;opaque p-8 my-auto&quot;&gt;이제 너도 날 봐줬으면 하는데, 너한테 나도 스포트라이트를 받는 사람이었으면 좋겠는데. 그게 내 마음대로 되진 않겠지? 
@@ -240,7 +244,7 @@ div.opaque {
 이건 내 일기일 뿐인데, 넌 관심도 없고 알 수도 없는 내 마음일 뿐인데…
 
 
-[[다시 그 사람을 떠올리며|07]]&lt;/div&gt;
+[[다시 떠올리며|07]]&lt;/div&gt;
 ]&lt;/div&gt;&lt;/div&gt;
 
 
@@ -260,7 +264,7 @@ div.opaque {
 
 
 
-[[그 사람을 계속 떠올린다|08]]&lt;/div&gt;
+[[그 애를 계속 떠올린다|08]]&lt;/div&gt;
 ]&lt;/div&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="9" name="08" tags="2" position="100,1000" size="100,100">&lt;div class=&quot;background&quot;&gt;&lt;div class=&quot;page body-page&quot;&gt;(char-style: via (t8n-delay:pos*60)+(t8n:&#39;dissolve&#39;)+(text-colour:black))
 [&lt;div class=&quot;date&quot;&gt;2024/11/14&lt;/div&gt;
 &lt;div class=&quot;main&quot;&gt;일기를 쓰면 쓸수록 너에 대한 마음이 더 깊어지는 것 같아.
